--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
             <a herf="#" id="contact">CONTACT</a>
         </nav>
         <img src="./img/Website_logos_4.png" alt="The Flower Web" class="img">
+        <a href="#" target="_self" class="linksvg1">
+            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+        </a>        
+        <a href="#" target="_self" class="linksvg2">
+            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-bag" viewBox="0 0 24 24"><path d="m19.26 9.696 1.385 9A2 2 0 0 1 18.67 21H5.33a2 2 0 0 1-1.977-2.304l1.385-9A2 2 0 0 1 6.716 8h10.568a2 2 0 0 1 1.977 1.696zM14 5a2 2 0 1 0-4 0" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+        </a>
+        <a href="#" target="_self" class="linksvg3">
+
+        </a>
     </div>
     <div class="div2">
         <div class="anh1">
