--- a/home.html
+++ b/home.html
@@ -24,12 +24,16 @@
         <button class="buttonCenter">
             <a href="" class="aButton"><span>SHOP ONLINE</span></a>
         </button>
-        <nav class="navBar">
-            <a href="#" id="home">HOME</a>
-            <a herf="#" id="shop">SHOP</a>
-            <a herf="#" id="ourstories">OUR STORIES</a>
-            <a herf="#" id="contact">CONTACT</a>
-        </nav>
+        <!-- <nav class="navBar"><input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">☰</label>
+            <div class="menu-a">
+                <a href="#" id="home">HOME</a>
+                <a herf="#" id="shop">SHOP</a>
+                <a herf="#" id="ourstories">OUR STORIES</a>
+                <a herf="#" id="contact">CONTACT</a>
+            </div>
+        </nav> -->
         <img src="./img/Website_logos_4.png" alt="The Flower Web" class="img">
         <a href="#" target="_self" class="linksvg1">
             <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"></path></svg>
@@ -153,6 +157,26 @@
             <h2>Checkout & Delivery</h2>
             <p>Delivery is available Monday – Saturday. </p>  
             <p>For same day delivery, orders must be placed before 1pm (ACST) Monday – Friday.</p>      
+        </div>
+    </div>
+    <div class="div7">
+        <div class="newletter">
+            <h2>Newsletter</h2>
+            <p>Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.</p>      
+        </div>
+        <div class="menu">
+            <h2>Menu</h2>
+            <a href="">HOME</a><br>
+            <a href="">SHOP</a><br>
+            <a href="">OUR STORIES</a><br>
+            <a href="">CONTACT</a><br>
+        </div>
+        <div class="visit">
+            <h2>Visit any our stores!</h2>
+            <p>View store finder<a href="" title="Our Stores"> here.</a></p>
+            <p><a href="tel://+61 427 184 951">+61 427 184 951</a></p>
+            <p>info@theflowerweb.com.au </p>
+            <p>Website by <a href="https://letsfloat.com.au" title="https://letsfloat.com.au">Studio Float</a></p>
         </div>
     </div>
 </body>
