--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <h2 class="textCenter">
             Online  home to the Flower Depo,<br> Parade & Hutt
         </h2>
-        <button class="buttonCenter">
+        <button id ="shoponline" class="buttonCenter">
             <a href="" class="aButton"><span>SHOP ONLINE</span></a>
         </button>
         <!-- <nav class="navBar"><input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -172,7 +172,7 @@
             <a href="">CONTACT</a><br>
         </div>
         <div class="visit">
-            <h2>Visit any our stores!</h2>
+                <h2>Visit any our stores!</h2>
             <p>View store finder<a href="" title="Our Stores"> here.</a></p>
             <p><a href="tel://+61 427 184 951">+61 427 184 951</a></p>
             <p>info@theflowerweb.com.au </p>
