--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
                 Enter your email and we'll send you a login code
             </p>
             <input type="email" placeholder="Email" class="input-login" id="getEmail">
+            <p id="error-email" class="error-nhap-email"></p>
             <button class="button-login" onclick="submitForm(event)">
                 <span class="content-button">Continue</span>
             </button>            
